KLinkItemSelectionModel: Synchronize currentIndex

In addition to synchronizing selection, also synchronize the current
index.

This fixes a bug in Gwenview where image operations are not applied to
the correct images when multiple images are selected.

BUG: 322850
FIXED-IN: 4.11.1
REVIEW: 111953