kdeui/itemviews/klinkitemselectionmodel.cpp
@@ -56,6 +56,8 @@ public:
     }
 
     void sourceSelectionChanged(const QItemSelection& selected, const QItemSelection& deselected);
+    void sourceCurrentChanged(const QModelIndex& current);
+    void slotCurrentChanged(const QModelIndex& current);
 
     QAbstractItemModel * const m_model;
     QItemSelectionModel * const m_linkedItemSelectionModel;
@@ -68,6 +70,8 @@ KLinkItemSelectionModel::KLinkItemSelectionModel(QAbstractItemModel *model, QIte
         d_ptr(new KLinkItemSelectionModelPrivate(this, model, proxySelector))
 {
     connect(proxySelector, SIGNAL(selectionChanged(QItemSelection,QItemSelection)), SLOT(sourceSelectionChanged(QItemSelection,QItemSelection)));
+    connect(proxySelector, SIGNAL(currentChanged(QModelIndex,QModelIndex)), SLOT(sourceCurrentChanged(QModelIndex)));
+    connect(this, SIGNAL(currentChanged(QModelIndex,QModelIndex)), SLOT(slotCurrentChanged(QModelIndex)));
 }
 
 KLinkItemSelectionModel::~KLinkItemSelectionModel()
@@ -144,6 +148,12 @@ void KLinkItemSelectionModel::select(const QItemSelection &selection, QItemSelec
     d->m_ignoreCurrentChanged = false;
 }
 
+void KLinkItemSelectionModelPrivate::slotCurrentChanged(const QModelIndex& current)
+{
+    const QModelIndex mappedCurrent = m_indexMapper->mapLeftToRight(current);
+    m_linkedItemSelectionModel->setCurrentIndex(mappedCurrent, QItemSelectionModel::NoUpdate);
+}
+
 void KLinkItemSelectionModelPrivate::sourceSelectionChanged(const QItemSelection& selected, const QItemSelection& deselected)
 {
     Q_Q(KLinkItemSelectionModel);
@@ -161,6 +171,13 @@ void KLinkItemSelectionModelPrivate::sourceSelectionChanged(const QItemSelection
 
     q->QItemSelectionModel::select(mappedDeselection, QItemSelectionModel::Deselect);
     q->QItemSelectionModel::select(mappedSelection, QItemSelectionModel::Select);
+}
+
+void KLinkItemSelectionModelPrivate::sourceCurrentChanged(const QModelIndex& current)
+{
+    Q_Q(KLinkItemSelectionModel);
+    const QModelIndex mappedCurrent = m_indexMapper->mapRightToLeft(current);
+    q->setCurrentIndex(mappedCurrent, QItemSelectionModel::NoUpdate);
 }
 
 #include "klinkitemselectionmodel.moc"
